--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/all.css">
-    <title>Document</title>
+    <title>TEMPLET_1</title>
 </head>
 
 <body>
